testdata/baselines/reference/submodule/compiler/noDefaultLib.errors.txt
noDefaultLib.ts(4,11): error TS2428: All declarations of 'Array' must have identical type parameters.
bundled:///libs/lib.es5.d.ts(1322,11): error TS2428: All declarations of 'Array' must have identical type parameters.


==== noDefaultLib.ts (1 errors) ====
    /// <reference no-default-lib="true"/>
    var x;
    
    interface Array {}
              ~~~~~
!!! error TS2428: All declarations of 'Array' must have identical type parameters.
    interface String {}
    interface Number {}
    interface Object {}
    interface Date {}
    interface Function {}
    interface RegExp {}